--- a/snipcart-angular-sanity/package.json
+++ b/snipcart-angular-sanity/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "@sanity/block-content-to-html": "^1.3.8",
+    "@sanity/client": "^0.140.32",
+    "@sanity/image-url": "^0.140.12",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
